feat(ontology): migration
Related to IIS-5059

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -8,3 +8,7 @@
 - Добавлена галочка Abstract для Entities
 - Исправлен переход на типы
 - Добавлена возможность редактировать имя проперти или релейшна
+
+Версия 1.14
+- Добавлена миграция
+- Исправлены графические баги в разных разрешениях
