--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -18,3 +18,6 @@
 
 Версия 1.16
 - В миграцию добавлены референсы из других объектов
+
+Версия 1.17
+- Исправлен баг с сущностями без свойств, которые появлялись после миграции
