feat(OntologyManager): version 1.18

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -21,3 +21,6 @@
 
 Версия 1.17
 - Исправлен баг с сущностями без свойств, которые появлялись после миграции
+
+Версия 1.18
+- Добавлена возможность миграции референсов на ObjectOfStudy
