fix(ontologyManager): interface limitations
Relates to IIS-6971

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -27,3 +27,9 @@
 
 Версия 1.19
 - Добавлен поиск дубликатов
+
+Версия 1.20
+- Добавлена возможность просмотра и редактирвоания данных
+
+Версия 1.21
+- Добавлена "защита от дурака" в интерфейсе
