feat(ontology): version 24, fix bug

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -39,3 +39,6 @@
 
 Версия 1.23
 - Исправлен баг при перезагрузке схемы
+
+Версия 1.24
+- Исправлен баг при сохранении пустых значений в поля типа инт
