feat(OntologyManager): reindex elastic
Relates to IIS-6928

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -42,3 +42,10 @@
 
 Версия 1.24
 - Исправлен баг при сохранении пустых значений в поля типа инт
+
+Версия 1.25
+- Добавлено удаление объектов онтологии
+- В конфиг добавлена информация об адресе апи, адресе сайта и порядок сортировки
+
+Версия 1.26
+- Добавлена возможность пересоздавать индексы Эластика
