feat(ontologyManager): upload icons
Relates to IIS-7060

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -49,3 +49,7 @@
 
 Версия 1.26
 - Добавлена возможность пересоздавать индексы Эластика
+
+Версия 1.28
+- Добавлена возможность добавлять иконки к типам сущностей
+- В список перестройки индексов эластика добавлены вики
