--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -53,3 +53,6 @@
 Версия 1.28
 - Добавлена возможность добавлять иконки к типам сущностей
 - В список перестройки индексов эластика добавлены вики
+
+Верси 1.29
+- исправлен баг - вернули крутилку при перестройке индексов
