--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -66,3 +66,11 @@
 
 Версия 1.32
 - Исправлен баг при обновлении базы
+
+Версия 1.33
+- Добавлено редактирование грифов (AccessLevel)
+- Добавлена перезагрузка кэша онтологии
+- Добавлена перезагрузка всего веб приложения
+
+Версия 1.34
+- Исправлены баги
