OntologyManager version 1.41 Comparison databases fix

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -77,3 +77,10 @@
 
 Версия 1.35
 - Реиндекс матиралов сделан асинхронным
+
+Версия 1.40
+- Удалён контрол для прямого редактирования метаданных
+- Появились новые визуальные контролы
+
+Версия 1.41
+- Исправлены баги при сравнении баз данных
