Fix of bug with sign in Person
Relates to IIS-8468

--- a/src/Iis.OntologyManager/ReleaseNotes.txt
+++ b/src/Iis.OntologyManager/ReleaseNotes.txt
@@ -84,3 +84,6 @@
 
 Версия 1.41
 - Исправлены баги при сравнении баз данных
+
+Версия 1.42
+- Исправлен баг, из-за которого не отображался sign в Person
